# test

./: .clang-format  CMakeLists.txt  main.cpp
include/paralel_downloader/: CMakeLists.txt  paralel_downloader.cpp  paralel_downloader.h
include/settings/: CMakeLists.txt  settings.cpp  settings.h
include/very_easy_curl/: CMakeLists.txt  very_easy_curl.cpp  very_easy_curl.h
